# wikibench

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: config.py  main.py  openrouter_client.py  reasoning_config.py
src/benchmark/: attempt.py  conditions.py  metrics.py  orchestrator.py
src/game/: engine.py  parser.py  prompts.py
src/output/: __init__.py  csv_writer.py  graphs.py  traces.py
src/wikipedia/: __init__.py  api.py  article.py  links.py  pathfinder.py  sampler.py
tests/: mini_benchmark.py  test_integration.py  test_sanity.py
