[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wikibench"
version = "0.1.0"
description = "Wikipedia Wiki Game Benchmark for LLM comparison"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.1.0",
    "markdownify>=0.11.0",
    "tenacity>=8.2.0",
    "tqdm>=4.66.0",
]

[project.scripts]
wikibench = "src.main:main"
